js/js.translator/testData/incremental/invalidation/constValMoveBetweenModules/lib2/l2.1.kt
package sample

const val answer: Int = 1
